kubernetes/apps/dispatcharr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dispatcharr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dispatcharr.mpdavis.com`)
      kind: Rule
      services:
        - name: dispatcharr
          port: 9191
  tls: {}
